others setup init

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,8 +127,11 @@
 
   body {
     @apply bg-background text-foreground;
-    scroll-behavior: smooth;
   }
+}
+
+html{
+  scroll-behavior: smooth;
 }
 
 .glow {
