next UI and enhancements for version 2

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,12 @@
   font-family: var(--font-meitei), serif;
 }
 
+@media (min-width: 768px) {
+  * {
+    cursor: none !important;
+  }
+}
+
 @layer base {
   :root {
 
